Fix: converted css camel casing to kebab casing

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -13,20 +13,20 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<div class="bgImg" id="parallax">
-			<header class="width100 mainColor01">
-				<nav class="height100 flexRow brownText">
-					<ul class="height100 flexRow">
+		<div class="bg-img" id="parallax">
+			<header class="width-100 main-color-01">
+				<nav class="height-100 flex-row brown-text">
+					<ul class="height-100 flex-row">
 						<li class="hoverGlow"><a href="">Location</a></li>
 						<li class="hoverGlow" ><a href="">Menu</a></li>
 						<li class="hoverGlow" ><a href="">About Us</a></li>
 					</ul>
 						<a href=""><img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
-					<ul class="height100 flexRow alignGroupRight">
+					<ul class="height-100 flex-row alignGroupRight">
 						<li class="hoverGlow" ><a href="">Contact Us</a></li>
 						<li class="hoverGlow" ><a href="">Hiring</a></li>
 						<li>
-							<ul class="flexRow socialIcons ">
+							<ul class="flex-row social-icons ">
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
@@ -36,15 +36,15 @@
 				</nav>
 			</header>
 		<main>
-				<section class="LogoHomeSection flexRow">
+				<section class="logo-home-section flex-row">
 					<img src="css/assets/img/design_logos/Main-Logo.svg" alt="Cafe Boulange">
 				</section>
-				<div class="mainColor01 aboutUsStylingBorder">
-					<section class="flexColumn mainColor01 AboutUsSection mainColor02 whiteText">
+				<div class="main-color-01 about-us-styling-border">
+					<section class="flex-column main-color-01 about-us-section main-color-02 white-text">
 						<h3>About Us And What We Love</h3>
-						<section class="flexRow aboutUs">
+						<section class="flex-row about-us">
 							<img src="css/assets/img/About Us_Founders .png" alt="The two owners smilling">
-							<section class="flexColumn aboutUsText">
+							<section class="flex-column about-us-text">
 								<p>
 									Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse rerum necessitatibus quam, autem rem tempora ab quisquam, deleniti maiores deserunt vitae cum fugiat ipsam quia distinctio molestiae accusamus adipisci odio!
 								</p>
@@ -60,13 +60,13 @@
 					</section>
 				</div>
 			</div >
-				<div class="bgImg02" id="parallax02">
-					<section class="flexColumn comeVisitSection whiteText">
+				<div class="bg-img-02" id="parallax02">
+					<section class="flex-column come-visit-section white-text">
 						<h3>Come Visit</h3>
-						<section class="flexRow comeVisitDetails width100 height100">
-							<div class="flexColumn">
+						<section class="flex-row come-visit-details width-100 height-100">
+							<div class="flex-column">
 								<h4>Our hours</h4>
-								<ul class="flexColumn">
+								<ul class="flex-column">
 									<li>Monday 7:00 am to 6:00pm</li>
 									<li>Tuesday 7:00 am to 6:00pm</li>
 									<li>Wensday 7:00 am to 6:00pm</li>
@@ -76,14 +76,14 @@
 									<li>Sunday 8:00 am to 7:00pm</li>
 								</ul>
 							</div>
-							<div class="flexColumn">
+							<div class="flex-column">
 								<h4>Location and contact info</h4>
-								<ul class="flexColumn alignTextLeft">
+								<ul class="flex-column align-text-left">
 									<li>100 coffee town, ON, Coffee country, 1C3 C1F</li>
 									<li>Phone: 4111-6666-6666</li>
 									<li>Email :  cafeBoulange@coffee.come</li>
 									<li>
-										<ul class="flexRow socialIcons">
+										<ul class="flex-row social-icons">
 											<li><a href=""><img src="css/assets/img/design_logos/Icon-Insta 	White.svg" alt="Our InstaGram"></a></li>
 											<li><a href=""><img src="css/assets/img/design_logos/Icon-Twitter 	White.svg" alt="Our Twitter"></a></li>
 											<li><a href=""><img src="css/assets/img/design_logos/	Icon-Facebook white.svg" alt="Our Facebook"></a></li>
@@ -94,17 +94,17 @@
 						</section>
 					</section>
 				</div>
-			<section class="mainColor01 flexColumn ourGoodsSection whiteText">
-				<h2 class="mainColor02 width100">Our Goods</h2>
-				<section class="width100">
+			<section class="main-color-01 flex-column our-goods-section white-text">
+				<h2 class="main-color-02 width-100">Our Goods</h2>
+				<section class="width-100">
 					<nav>
-						<ul class="flexRow menuCategorySelection brownText">
+						<ul class="flex-row menu-category-selection brown-text">
 							<li class=" menuGlow"><a  class="subtitle-sm" href="">Pastry</a></li>
 							<li class=" menuGlow"><a  class="subtitle-sm" href="">Cookies</a></li>
 							<li class=" menuGlow"><a  class="subtitle-sm" href="">Coffee</a></li>
 						</ul>
 					</nav>
-					<ul class="flexRow menuOptions">
+					<ul class="flex-row menu-options">
 						<li>
 							<div>
 								<h4>Pastry 01</h4>
@@ -150,15 +150,15 @@
 					</ul>
 				</section>
 			</section>
-			<footer class="width100 focusColor whiteText flexRow footerSection">
-				<div class="flexColumn height100">
+			<footer class="width-100 focus-color white-text flex-row footer-section">
+				<div class="flex-column height-100">
 					<h4>Location and contact info</h4>
 					<ul>
 						<li>Phone: 4111-6666-6666</li>
 						<li>Email :  cafeBoulange@coffee.come</li>
 						<li>100 coffee town, ON, Coffee country, 1C3 C1F</li>
 						<li>
-							<ul class="flexRow socialIcons">
+							<ul class="flex-row social-icons">
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-Insta White.svg" alt="Our InstaGram"></a></li>
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-Twitter White.svg" alt="Our Twitter"></a></li>
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-Facebook white.svg" alt="Our Facebook"></a></li>
@@ -166,7 +166,7 @@
 						</li>
 					</ul>
 				</div>
-				<div class="aligTextRight">
+				<div class="alig-text-right">
 					<h4>Our hours</h4>
 					<ul>
 						<li>Monday 7:00 am to 6:00pm</li>
