Add: background glow on our menu selection options and border radius curve on header options

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -99,9 +99,9 @@
 				<section class="width-100">
 					<nav>
 						<ul class="flex-row menu-category-selection brown-text">
-							<li class=" menuGlow"><a  class="subtitle-sm" href="">Pastry</a></li>
-							<li class=" menuGlow"><a  class="subtitle-sm" href="">Cookies</a></li>
-							<li class=" menuGlow"><a  class="subtitle-sm" href="">Coffee</a></li>
+							<li class=" menuGlow"><a  class="subtitle-sm menuBgGlow" href="">Pastry</a></li>
+							<li class=" menuGlow"><a  class="subtitle-sm menuBgGlow" href="">Cookies</a></li>
+							<li class=" menuGlow"><a  class="subtitle-sm menuBgGlow" href="">Coffee</a></li>
 						</ul>
 					</nav>
 					<ul class="flex-row menu-options">
