--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -106,46 +106,46 @@
 					</nav>
 					<ul class="flex-row menu-options">
 						<li>
-							<div>
+							<img aria-label="role=img" src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
+							<div class="card-body">
 								<h4>Pastry 01</h4>
 								<span>5$</span>
 							</div>
-							<img aria-label="role=img" src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
 						</li>
 						<li>
-							<div>
-								<h4>Pastry 02</h4>
-								<span>10$</span>
-							</div>
 							<img src="css/assets/img/bake good 2.png" alt="Fresh Pastry 02">
+							<div class="card-body">
+								<!-- <h4>Pastry 02</h4>
+								<span>10$</span> -->
+							</div>
 						</li>
 						<li>
-							<div>
-								<h4>Pastry 03</h4>
-								<span>7$</span>
-							</div>
 							<img src="css/assets/img/bake good 3.png" alt="Fresh Pastry 03">
+							<div class="card-body">
+								<!-- <h4>Pastry 03</h4>
+								<span>7$</span> -->
+							</div>
 						</li>
 						<li>
-							<div>
-								<h4>Pastry 04</h4>
-								<span>5$</span>
-							</div>
 							<img src="css/assets/img/bake good 4.png" alt="Fresh Pastry 04">
+							<div class="card-body">
+								<!-- <h4>Pastry 04</h4>
+								<span>5$</span> -->
+							</div>
 						</li>
 						<li>
-							<div>
-								<h4>Pastry 05</h4>
-								<span>5$</span>
-							</div>
 							<img src="css/assets/img/bake good 5.png" alt="Fresh Pastry 05">
+							<div class="card-body">
+								<!-- <h4>Pastry 05</h4>
+								<span>5$</span> -->
+							</div>
 						</li>
 						<li>
-							<div>
-								<h4>Pastry 06</h4>
-								<span>15$</span>
-							</div>
 							<img src="css/assets/img/bake good 6.png" alt="Fresh Pastry 0">
+							<div class="card-body">
+								<!-- <h4>Pastry 06</h4>
+								<span>15$</span> -->
+							</div>
 						</li>
 					</ul>
 				</section>
