Fix: main-product-info pastry name and price spacing in the our goods section

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -108,7 +108,7 @@
 						<li class="product-card">
 							<img src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
 							<div class="card-body flex-column">
-								<div class="flex-row main-produc-info">
+								<div class="flex-row main-product-info width-100">
 									<h4>Pastry 01</h4>
 									<span>5$</span>
 								</div>
@@ -118,7 +118,7 @@
 						<li class="product-card">
 							<img src="css/assets/img/bake good 2.png" alt="Fresh Pastry 02">
 							<div  class="card-body flex-column">
-								<div class="flex-row main-produc-info">
+								<div class="flex-row main-product-info width-100">
 									<h4>Pastry 02</h4>
 									<span>10$</span>
 								</div>
@@ -128,7 +128,7 @@
 						<li class="product-card">
 							<img src="css/assets/img/bake good 3.png" alt="Fresh Pastry 03">
 							<div  class="card-body flex-column">
-								<div class="flex-row main-produc-info">
+								<div class="flex-row main-product-info width-100">
 									<h4>Pastry 03</h4>
 									<span>7$</span>
 								</div>
@@ -138,7 +138,7 @@
 						<li class="product-card">
 							<img src="css/assets/img/bake good 4.png" alt="Fresh Pastry 04">
 							<div  class="card-body flex-column">
-								<div class="flex-row main-produc-info">
+								<div class="flex-row main-product-info width-100">
 									<h4>Pastry 04</h4>
 									<span>5$</span>
 								</div>
@@ -148,7 +148,7 @@
 						<li class="product-card">
 							<img src="css/assets/img/bake good 5.png" alt="Fresh Pastry 05">
 							<div  class="card-body flex-column">
-								<div class="flex-row main-produc-info">
+								<div class="flex-row main-product-info width-100">
 									<h4>Pastry 05</h4>
 									<span>5$</span>
 								</div>
@@ -156,9 +156,9 @@
 							</div>
 						</li>
 						<li class="product-card">
-							<img src="css/assets/img/bake good 6.png" alt="Fresh Pastry 0">
+							<img src="css/assets/img/bake good 6.png" alt="Fresh Pastry 05">
 							<div  class="card-body flex-column">
-								<div cclass="flex-row main-produc-info">
+								<div class="flex-row main-product-info width-100">
 									<h4>Pastry 06</h4>
 									<span>15$</span>
 								</div>
