--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -58,6 +58,12 @@
 							</section>
 						</section>
 					</section>
+			
+				</div>
+				<div class="pointer">
+					<svg data-name="Layer 1"viewBox="0 0 1200 120" preserveAspectRatio="none">
+						<path d="M1200,0H0V120H281.94C572.9,116.24,602.45,3.86,602.45,3.86h0S632,116.24,923,120h277Z" class="shape-fill"></path>
+					</svg>
 				</div>
 			</div >
 				<div class="bg-img-02" id="parallax02">
