--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -58,11 +58,15 @@
 							</section>
 						</section>
 					</section>
-			
+					<div class="custom-shape-divider-bottom-1689962334">
+						<svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+							<path d="M602.45,3.86h0S572.9,116.24,281.94,120H923C632,116.24,602.45,3.86,602.45,3.86Z" class="shape-fill"></path>
+						</svg>
+					</div>
 				</div>
-				<div class="pointer">
-					<svg data-name="Layer 1"viewBox="0 0 1200 120" preserveAspectRatio="none">
-						<path d="M1200,0H0V120H281.94C572.9,116.24,602.45,3.86,602.45,3.86h0S632,116.24,923,120h277Z" class="shape-fill"></path>
+				<div class="custom-shape-divider-bottom-1689960331">
+					<svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+						<path d="M602.45,3.86h0S572.9,116.24,281.94,120H923C632,116.24,602.45,3.86,602.45,3.86Z" class="shape-fill"></path>
 					</svg>
 				</div>
 			</div >
