WIP: adgjusting nav bar, changing flex direction

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<div class="bg-img" id="parallax">
 			<header class="width-100 main-color-01">
-				<nav class="height-100 flex-row brown-text">
+				<nav class="height-100 brown-text">
 					<ul class="height-100 flex-row">
 						<li class="hoverGlow"><a href="">Location</a></li>
 						<li class="hoverGlow" ><a href="">Menu</a></li>
