WIP: rework nav bar responsiveness for pull down menu

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -16,13 +16,14 @@
 		<div class="bg-img" id="parallax">
 			<header class="width-100 main-color-01">
 				<nav class="height-100 brown-text">
-					<ul class="height-100 flex-row">
+				<a class="test" href="" ><img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
+
+					<ul class="nav-option flex-row">
 						<li class="hoverGlow"><a href="">Location</a></li>
 						<li class="hoverGlow" ><a href="">Menu</a></li>
 						<li class="hoverGlow" ><a href="">About Us</a></li>
 					</ul>
-						<a href=""><img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
-					<ul class="height-100 flex-row alignGroupRight">
+					<ul class="nav-option flex-row alignGroupRight">
 						<li class="hoverGlow" ><a href="">Contact Us</a></li>
 						<li class="hoverGlow" ><a href="">Hiring</a></li>
 						<li>
