Adjust: replace class name test on mini logo anchor tag to mini-logo-anchor

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -16,7 +16,7 @@
 		<div class="bg-img" id="parallax">
 			<header class="width-100 main-color-01">
 				<nav class="height-100 brown-text">
-				<a class="test" href="" ><img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
+				<a class="mini-logo-anchor" href="" ><img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
 					<ul class="nav-option flex-row ">
 						<li class="hoverGlow"><a href="">Location</a></li>
 						<li class="hoverGlow" ><a href="">Menu</a></li>
