WIP: add nav bar button for phone mode to toggle down the nav bar

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -10,13 +10,26 @@
 		<meta name ="viewport" content="with=device-width, initial-scale=1.0"><!--added this not sure what it does-->
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet"  href="css/style.css">
 	</head>
 	<body>
+
+
+
 		<div class="bg-img" id="parallax">
+
+			
 			<header class="width-100 main-color-01">
+				<a class="mini-logo-anchor" href="" >
+					<img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange">
+				</a>
+				<input type="checkbox" id="nav-toggle" class="nav-toggle">
+
+				<label for="nav-toggle" class="nav-toggle-label">
+					<span>CLick</span>
+				</label>
+
 				<nav class="height-100 brown-text">
-				<a class="mini-logo-anchor" href="" ><img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange"></a>
 					<ul class="nav-option flex-row ">
 						<li class="hoverGlow"><a href="">Location</a></li>
 						<li class="hoverGlow" ><a href="">Menu</a></li>
@@ -35,6 +48,10 @@
 					</ul>
 				</nav>
 			</header>
+
+
+
+
 		<main>
 				<section class="logo-home-section flex-row">
 					<img src="css/assets/img/design_logos/Main-Logo.svg" alt="Cafe Boulange">
