Adjust: display click icon only when screen is small enough

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -20,15 +20,17 @@
 
 			
 			<header class="width-100 main-color-01">
-				<a class="mini-logo-anchor" href="" >
-					<img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange">
-				</a>
 				<input type="checkbox" id="nav-toggle" class="nav-toggle">
-
-				<label for="nav-toggle" class="nav-toggle-label">
+				<label for="nav-toggle-labble" class="nav-toggle-label">
 					<span>CLick</span>
 				</label>
 
+
+				<a class="mini-logo-anchor" href="" >
+					<img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange">
+				</a>
+
+				
 				<nav class="height-100 brown-text">
 					<ul class="nav-option flex-row ">
 						<li class="hoverGlow"><a href="">Location</a></li>
