--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -21,8 +21,8 @@
 			
 			<header class="width-100 main-color-01">
 				<input type="checkbox" id="nav-toggle" class="nav-toggle">
-				<label for="nav-toggle-labble" class="nav-toggle-label">
-					<span>CLick</span>
+				<label for="nav-toggle" class="nav-toggle-label">
+					<span></span>
 				</label>
 
 
