Fix: nav bar on small screen disapearing nav bg now keeps color through transition

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -30,7 +30,7 @@
 					<img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange">
 				</a>
 
-				<nav class="height-100 brown-text">
+				<nav class="nav-body height-100 brown-text">
 					<ul class="nav-option flex-row ">
 						<li class="hoverGlow"><a href="">Location</a></li>
 						<li class="hoverGlow" ><a href="">Menu</a></li>
