--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -20,7 +20,7 @@
 
 			
 			<header class="width-100 main-color-01">
-				<input type="checkbox" id="nav-toggle" class="nav-toggle">
+				<!-- <input type="checkbox" id="nav-toggle" class="nav-toggle"> -->
 				<label for="nav-toggle" class="nav-toggle-label">
 					<span></span>
 				</label>
