--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -36,16 +36,16 @@
 				</button>
 
 				<nav class="nav-body height-100 brown-text">
-					<ul id="primary-navigation" class="nav-option flex-row ">
+					<ul id="primary-navigation" data-visible="false" class="nav-option flex-row ">
 						<li class="hoverGlow"><a href="">Location</a></li>
 						<li class="hoverGlow" ><a href="">Menu</a></li>
 						<li class="hoverGlow" ><a href="">About Us</a></li>
 					</ul>
-					<ul id="primary-navigation" class="nav-option flex-row">
+					<ul  class="nav-option flex-row">
 						<li class="hoverGlow" ><a href="">Contact Us</a></li>
 						<li class="hoverGlow" ><a href="">Hiring</a></li>
 						<li>
-							<ul class="flex-row social-icons ">
+							<ul id="primary-navigation" data-visible="false" class="flex-row social-icons ">
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
 								<li><a href=""><img src="css/assets/img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
