Fix: nav class and js var naming convention for propper toggle detection of atr data-visible

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -21,38 +21,34 @@
 			
 			<header class="width-100 main-color-01">
 
-				<!-- <input type="checkbox" id="nav-toggle" class="nav-toggle"> -->
-				<!-- <label for="nav-toggle" class="nav-toggle-label">
-					<span></span>
-				</label> -->
-
-
 				<a class="mini-logo-anchor" href="" >
 					<img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange">
 				</a>
 
-				<button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
+				<button class="mobile-nav-toggle" aria-controls="nav-body" aria-expanded="false">
 					<span class="sr-only">Menu</span>
 				</button>
 
-				<nav class="nav-body height-100 brown-text">
-					<ul id="primary-navigation" data-visible="false" class="nav-option flex-row ">
-						<li class="hoverGlow"><a href="">Location</a></li>
-						<li class="hoverGlow" ><a href="">Menu</a></li>
-						<li class="hoverGlow" ><a href="">About Us</a></li>
-					</ul>
-					<ul  class="nav-option flex-row">
-						<li class="hoverGlow" ><a href="">Contact Us</a></li>
-						<li class="hoverGlow" ><a href="">Hiring</a></li>
-						<li>
-							<ul id="primary-navigation" data-visible="false" class="flex-row social-icons ">
-								<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
-								<li><a href=""><img src="css/assets/img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
-								<li><a href=""><img src="css/assets/img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
-							</ul>
-						</li>
-					</ul>
-				</nav>
+				<div class="height-100"> <!--might need to remove this div class, I put it here for potential styling purposes-->
+					<nav class="nav-body height-100 brown-text" data-visible="false">
+						<ul id="" data-visible="false" class="nav-option flex-row ">
+							<li class="hoverGlow"><a href="">Location</a></li>
+							<li class="hoverGlow" ><a href="">Menu</a></li>
+							<li class="hoverGlow" ><a href="">About Us</a></li>
+						</ul>
+						<ul  class="nav-option flex-row">
+							<li class="hoverGlow" ><a href="">Contact Us</a></li>
+							<li class="hoverGlow" ><a href="">Hiring</a></li>
+							<li>
+								<ul id="" data-visible="false" class="flex-row social-icons ">
+									<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
+									<li><a href=""><img src="css/assets/img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
+									<li><a href=""><img src="css/assets/img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
+								</ul>
+							</li>
+						</ul>
+					</nav>
+				</div>
 
 
 			</header>
