--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -31,7 +31,7 @@
 
 				<div class="height-100"> <!--might need to remove this div class, I put it here for potential styling purposes-->
 					<nav class="nav-body height-100 brown-text" data-visible="false">
-						<ul id="" data-visible="false" class="nav-option flex-row ">
+						<ul data-visible="false" class="nav-option flex-row ">
 							<li class="hoverGlow"><a href="">Location</a></li>
 							<li class="hoverGlow" ><a href="">Menu</a></li>
 							<li class="hoverGlow" ><a href="">About Us</a></li>
@@ -40,7 +40,7 @@
 							<li class="hoverGlow" ><a href="">Contact Us</a></li>
 							<li class="hoverGlow" ><a href="">Hiring</a></li>
 							<li>
-								<ul id="" data-visible="false" class="flex-row social-icons ">
+								<ul data-visible="false" class="flex-row social-icons ">
 									<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
 									<li><a href=""><img src="css/assets/img/design_logos/Icon-twitter brown.svg" alt="Our Twitter"></a></li>
 									<li><a href=""><img src="css/assets/img/design_logos/Icon-facebook brown.svg" alt="Our Facebook"></a></li>
