WIP: set-up part of the carousel html content to crreate a carousel for the our goods section item display

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -135,68 +135,97 @@
 							<li class=" menuGlow"><a  class="subtitle-sm menuBgGlow" href="">Coffee</a></li>
 						</ul>
 					</nav>
-					<ul class="flex-row menu-options">
-						<li class="product-card">
-							<img src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
-							<div class="card-body flex-column">
-								<div class="flex-row main-product-info width-100">
-									<h4>Pastry 01</h4>
-									<span>5$</span>
-								</div>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
-							</div>
-						</li>
-						<li class="product-card">
-							<img src="css/assets/img/bake good 2.png" alt="Fresh Pastry 02">
-							<div  class="card-body flex-column">
-								<div class="flex-row main-product-info width-100">
-									<h4>Pastry 02</h4>
-									<span>10$</span>
-								</div>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
-							</div>
-						</li>
-						<li class="product-card">
-							<img src="css/assets/img/bake good 3.png" alt="Fresh Pastry 03">
-							<div  class="card-body flex-column">
-								<div class="flex-row main-product-info width-100">
-									<h4>Pastry 03</h4>
-									<span>7$</span>
-								</div>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
-							</div>
-						</li>
-						<li class="product-card">
-							<img src="css/assets/img/bake good 4.png" alt="Fresh Pastry 04">
-							<div  class="card-body flex-column">
-								<div class="flex-row main-product-info width-100">
-									<h4>Pastry 04</h4>
-									<span>5$</span>
-								</div>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
-							</div>
-						</li>
-						<li class="product-card">
-							<img src="css/assets/img/bake good 5.png" alt="Fresh Pastry 05">
-							<div  class="card-body flex-column">
-								<div class="flex-row main-product-info width-100">
-									<h4>Pastry 05</h4>
-									<span>5$</span>
-								</div>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
-							</div>
-						</li>
-						<li class="product-card">
-							<img src="css/assets/img/bake good 6.png" alt="Fresh Pastry 05">
-							<div  class="card-body flex-column">
-								<div class="flex-row main-product-info width-100">
-									<h4>Pastry 06</h4>
-									<span>15$</span>
-								</div>
-								<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
-							</div>
-						</li>
-					</ul>
+
+
+
+					<div class="carousel">
+
+						<button class="carousel__button">
+							<img src="css/assets/img/Icons/Arrow_Left.svg" alt="">
+						</button>
+						
+						<div class="carousel__track-container">
+	
+							<ul class="carousel__track">
+	
+								<li class="carousel__slide">
+									<ul class="flex-row menu-options">
+										<li class="product-card">
+											<img src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
+											<div class="card-body flex-column">
+												<div class="flex-row main-product-info width-100">
+													<h4>Pastry 01</h4>
+													<span>5$</span>
+												</div>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
+											</div>
+										</li>
+										<li class="product-card">
+											<img src="css/assets/img/bake good 2.png" alt="Fresh Pastry 02">
+											<div  class="card-body flex-column">
+												<div class="flex-row main-product-info width-100">
+													<h4>Pastry 02</h4>
+													<span>10$</span>
+												</div>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
+											</div>
+										</li>
+										<li class="product-card">
+											<img src="css/assets/img/bake good 3.png" alt="Fresh Pastry 03">
+											<div  class="card-body flex-column">
+												<div class="flex-row main-product-info width-100">
+													<h4>Pastry 03</h4>
+													<span>7$</span>
+												</div>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
+											</div>
+										</li>
+										<li class="product-card">
+											<img src="css/assets/img/bake good 4.png" alt="Fresh Pastry 04">
+											<div  class="card-body flex-column">
+												<div class="flex-row main-product-info width-100">
+													<h4>Pastry 04</h4>
+													<span>5$</span>
+												</div>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
+											</div>
+										</li>
+										<li class="product-card">
+											<img src="css/assets/img/bake good 5.png" alt="Fresh Pastry 05">
+											<div  class="card-body flex-column">
+												<div class="flex-row main-product-info width-100">
+													<h4>Pastry 05</h4>
+													<span>5$</span>
+												</div>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
+											</div>
+										</li>
+										<li class="product-card">
+											<img src="css/assets/img/bake good 6.png" alt="Fresh Pastry 05">
+											<div  class="card-body flex-column">
+												<div class="flex-row main-product-info width-100">
+													<h4>Pastry 06</h4>
+													<span>15$</span>
+												</div>
+												<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolores rem! Quam iure illo voluptate.</p>
+											</div>
+										</li>
+									</ul>
+								</li>
+	
+	
+	
+							</ul>
+						</div>
+
+						<button class="carousel__button">
+							<img src="css/assets/img/Icons/Arro_Right.svg" alt="">
+						</button>
+
+
+					</div>
+
+
 				</section>
 			</section>
 			<footer class="width-100 focus-color white-text flex-row footer-section">
