Add: arrows for carousel product display case

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -140,7 +140,7 @@
 
 					<div class="carousel">
 
-						<button class="carousel__button">
+						<button class="carousel__button carousel__button--left">
 							<img src="css/assets/img/Icons/Arrow_Left.svg" alt="">
 						</button>
 						
@@ -218,9 +218,15 @@
 							</ul>
 						</div>
 
-						<button class="carousel__button">
+						<button class="carousel__button carousel__button--right">
 							<img src="css/assets/img/Icons/Arro_Right.svg" alt="">
 						</button>
+
+						<div class="carousel__nav">
+							<button class="acrousel__indicator"></button>
+							<button class="acrousel__indicator"></button>
+							<button class="acrousel__indicator"></button>
+						</div>
 
 
 					</div>
