Add: carousel__indicator design

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -351,10 +351,10 @@
 							<img src="css/assets/img/Icons/Arro_Right.svg" alt="">
 						</button>
 
-						<div class="carousel__nav">
-							<button class="acrousel__indicator"></button>
-							<button class="acrousel__indicator"></button>
-							<button class="acrousel__indicator"></button>
+						<div class="carousel__nav--bottom">
+							<button class="carousel__indicator current-slide"></button>
+							<button class="carousel__indicator"></button>
+							<button class="carousel__indicator"></button>
 						</div>
 
 
