Add: carousel spin on right arrow key click for the porduct display

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -148,7 +148,7 @@
 	
 							<ul class="carousel__track">
 	
-								<li class="carousel__slide">
+								<li class="carousel__slide current-slide">
 									<ul class="flex-row menu-options">
 										<li class="product-card">
 											<img src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
