--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -140,7 +140,7 @@
 
 					<div class="carousel">
 
-						<button class="carousel__button carousel__button--left">
+						<button class="carousel__button carousel__button--left is-hidden">
 							<img src="css/assets/img/Icons/Arrow_Left.svg" alt="">
 						</button>
 						
