Add: anchor tags for location, menu, about us and contac us header nav bar

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -32,12 +32,12 @@
 				<div class="height-100"> <!--might need to remove this div class, I put it here for potential styling purposes-->
 					<nav class="nav-body height-100 brown-text" data-visible="false">
 						<ul data-visible="false" class="nav-option flex-row ">
-							<li class="hoverGlow"><a href="">Location</a></li>
-							<li class="hoverGlow" ><a href="">Menu</a></li>
-							<li class="hoverGlow" ><a href="">About Us</a></li>
+							<li class="hoverGlow"><a href="#come-visit">Location</a></li>
+							<li class="hoverGlow" ><a href="#our-goods">Menu</a></li>
+							<li class="hoverGlow" ><a href="#about-us">About Us</a></li>
 						</ul>
 						<ul  class="nav-option flex-row">
-							<li class="hoverGlow" ><a href="">Contact Us</a></li>
+							<li class="hoverGlow" ><a href="#come-visit">Contact Us</a></li>
 							<li class="hoverGlow" ><a href="">Hiring</a></li>
 							<li>
 								<ul data-visible="false" class="flex-row social-icons ">
@@ -60,7 +60,7 @@
 				<section class="logo-home-section flex-row">
 					<img src="css/assets/img/design_logos/Main-Logo.svg" alt="Cafe Boulange">
 				</section>
-				<div class="main-color-01 about-us-styling-border">
+				<div id="about-us" class="main-color-01 about-us-styling-border">
 					<section class="flex-column main-color-01 about-us-section main-color-02 white-text">
 						<h3>About Us And What We Love</h3>
 						<section class="flex-row about-us">
@@ -92,7 +92,7 @@
 				</div>
 			</div >
 				<div class="bg-img-02" id="parallax02">
-					<section class="flex-column come-visit-section white-text">
+					<section id="come-visit" class="flex-column come-visit-section white-text">
 						<h3>Come Visit</h3>
 						<section class="flex-row come-visit-details width-100 height-100">
 							<div class="flex-column">
@@ -125,7 +125,7 @@
 						</section>
 					</section>
 				</div>
-			<section class="main-color-01 flex-column our-goods-section white-text">
+			<section  id="our-goods" class="main-color-01 flex-column our-goods-section white-text">
 				<h2 class="main-color-02 width-100">Our Goods</h2>
 				<section class="width-100">
 					<nav>
