Fix: header nav bar mini logo anchor tag zone, and carousel spin transform size jump

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -21,9 +21,11 @@
 			
 			<header class="width-100 main-color-01">
 
-				<a class="mini-logo-anchor" href="" >
-					<img class="miniLogo" src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange">
-				</a>
+				<div class="mini-logo__div">
+					<a class="mini-logo-anchor" href="" >
+						<img src="css/assets/img/design_logos/Mini-Logo.svg" alt="Cafe Boulange">
+					</a>
+				</div>
 
 				<button class="mobile-nav-toggle" aria-controls="nav-body" aria-expanded="false">
 					<span class="sr-only">Menu</span>
