Add: carousel spin js link to carousel__nav-by-name--top

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -131,10 +131,10 @@
 				<h2 class="main-color-02 width-100">Our Goods</h2>
 				<section class="width-100">
 					<nav>
-						<ul class="flex-row menu-category-selection brown-text">
-							<li class=" menuGlow"><a  class="subtitle-sm menuBgGlow" href="">Pastry</a></li>
-							<li class=" menuGlow"><a  class="subtitle-sm menuBgGlow" href="">Cookies</a></li>
-							<li class=" menuGlow"><a  class="subtitle-sm menuBgGlow" href="">Coffee</a></li>
+						<ul class="carousel__nav-by-name--top flex-row menu-category-selection brown-text">
+							<li class=" menuGlow"><span  class="subtitle-sm menuBgGlow" >Pastry</span></li>
+							<li class=" menuGlow"><span  class="subtitle-sm menuBgGlow" >Cookies</span></li>
+							<li class=" menuGlow"><span  class="subtitle-sm menuBgGlow" >Coffee</span></li>
 						</ul>
 					</nav>
 
@@ -150,7 +150,7 @@
 	
 							<ul class="carousel__track">
 	
-								<li class="carousel__slide current-slide">
+								<li id="carousel__slide--pastrys" class="carousel__slide current-slide">
 									<ul class="flex-row menu-options">
 										<li class="product-card">
 											<img src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
@@ -215,7 +215,7 @@
 									</ul>
 								</li>
 
-								<li class="carousel__slide">
+								<li id="carousel__slide--cookies"class="carousel__slide">
 									<ul class="flex-row menu-options">
 										<li class="product-card">
 											<img src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
@@ -280,7 +280,7 @@
 									</ul>
 								</li>
 
-								<li class="carousel__slide">
+								<li id="carousel__slide--coffee" class="carousel__slide">
 									<ul class="flex-row menu-options">
 										<li class="product-card">
 											<img src="css/assets/img/bake good 1.png" alt="Fresh Pastry 01">
