Remove: design folder

--- a/Coffee_backery_Code/index.html
+++ b/Coffee_backery_Code/index.html
@@ -34,13 +34,13 @@
 				<div class="height-100"> <!--might need to remove this div class, I put it here for potential styling purposes-->
 					<nav class="nav-body height-100 brown-text" data-visible="false">
 						<ul data-visible="false" class="nav-option flex-row ">
-							<li class="hoverGlow"><a href="#come-visit">Location</a></li>
+							<!-- <li class="hoverGlow"><a href="#come-visit">Location</a></li> -->
 							<li class="hoverGlow" ><a href="#our-goods">Menu</a></li>
 							<li class="hoverGlow" ><a href="#about-us">About Us</a></li>
 						</ul>
 						<ul  class="nav-option flex-row">
 							<li class="hoverGlow" ><a href="#come-visit">Contact Us</a></li>
-							<li class="hoverGlow" ><a href="">Hiring</a></li>
+							<!-- <li class="hoverGlow" ><a href="">Hiring</a></li> -->
 							<li>
 								<ul data-visible="false" class="flex-row social-icons ">
 									<li><a href=""><img src="css/assets/img/design_logos/Icon-insta brown.svg" alt="Our InstaGram"></a></li>
@@ -132,7 +132,7 @@
 				<section class="width-100">
 					<nav>
 						<ul class="carousel__nav-by-name--top flex-row menu-category-selection brown-text">
-							<li class=" menuGlow"><span  class="subtitle-sm menuBgGlow" >Pastry</span></li>
+							<li class=" menuGlow current-slide"><span  class="subtitle-sm menuBgGlow " >Pastry</span></li>
 							<li class=" menuGlow"><span  class="subtitle-sm menuBgGlow" >Cookies</span></li>
 							<li class=" menuGlow"><span  class="subtitle-sm menuBgGlow" >Coffee</span></li>
 						</ul>
