--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 				</div>
 			<section  id="our-goods" class="main-color-01 flex-column our-goods-section white-text">
 				<h2 class="main-color-02 width-100">Our Goods</h2>
-				<section class="width-100">
+				<section class="our-goods__section width-100">
 					<nav>
 						<ul class="carousel__nav-by-name--top flex-row menu-category-selection brown-text">
 							<li class=" menuGlow current-slide"><span  class="subtitle-sm menuBgGlow " >Pastry</span></li>
